--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="dist/bundle.js"></script>
 </head>
 <body>
-<div class="container" ui-view ></div>
+<property-header></property-header>
+<div class="container" ui-view></div>
 </body>
 </html>
